2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py (main): oops. Add extra argument.

2006-06-05  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/music-glossary.tely: clarified example
	from Francisco Vila, thanks!

2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/spacing-section.ly: new file.

	* lily/input.cc (programming_error): new function.

	* lily/spacing-engraver.cc (try_music): new function. Accept
	spacing-section-event

	* lily/spacing-spanner.cc (set_springs): take slices of all
	columns for spacing.

	* lily/include/paper-column.hh (class Paper_column): add
	Paper_column::compare.

	* ly/spanners-init.ly (newSpacingSection): add newSpacingSection.

	* scm/define-music-types.scm (music-descriptions): add
	SpacingSectionEvent

	* lily/music-iterator.cc (report_event): use programming_error for
	sending non-event error.

	* lily/input.cc (programming_error): new function

	* buildscripts/output-distance.py (main): use compare-XXX for
	compare files.
	(main): --threshold option, default at 0.30

	* output-distance.py (main): add --threshold option.

2006-06-04  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/paper-system.scm (paper-system-annotate): fix problem when
	annotating an empty system

2006-06-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: reinstate old web tar/copying.

2006-06-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/lyric-combine-music-iterator.cc (find_voice): return 0 if
	nothing changes. (Erik S) 

	* lily/percent-repeat-iterator.cc (get_music_list): fix repeat
	count. (Erik S)

2006-05-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/define-markup-commands.scm (whiteout): do not force
	foreground color of argument markup to black.

	* scm/stencil.scm (annotate-y-interval): put arrow dimension at
	the left of the arrow, instead of below the arrow name, so that,
	when two little arrows are vertically stacked, their dimensions