@@ -379,5 +379,8 @@ grestore
 		 output)
 	(interpret-for-signature found-grob (lambda (x) #f)
 				 (ly:stencil-expr
-				  (paper-system-stencil paper-system))))))
+				  (paper-system-stencil paper-system)))))
+
+  ;; should be superfluous, but leaking "too many open files"?
+  (close-port output))
   
