@@ -1,5 +1,8 @@
 2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* scm/stencil.scm (write-system-signature): explicitly 
+	-well, superfluously- close output port.
+
 	* buildscripts/output-distance.py (main): oops. Add extra argument.
 
 2006-06-05  Graham Percival  <gpermus@gmail.com>
